fix dependency copy